# spy-cat-backend

./: .env.example  .gitignore  README.md  main.py  manage.py  pyproject.toml  pytest.ini
cats/: models.py  serializers.py  test_cats.py  urls.py  utils.py  views.py
cats/migrations/: 0001_initial.py
spy_cat_agency/: asgi.py  settings.py  urls.py  wsgi.py
